5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_87.log
== TEST (2019-04-16 11:46:59) 
-- CODE:
#Leitura dos numeros inteiros
a = int("digite um numero inteiro: ")
b = int("digite um numero inteiro: ")
c = int("digite um numero inteiro: ")

menor = a

if(menor < b):
	menor = a
if(menor > b):
	menor = b
if(menor < c):
	menor = a
if(menor > c):
	menor = c

print(menor)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int("digite um numero inteiro: ")
ValueError: invalid literal for int() with base 10: 'digite um numero inteiro: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:48:01) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

menor = a

if(menor < b):
	menor = a
if(menor > b):
	menor = b
if(menor < c):
	menor = a
if(menor > c):
	menor = c

print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:48:15) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

menor = a

if(menor < b):
	menor = a
if(menor > b):
	menor = b
if(menor < c):
	menor = a
if(menor > c):
	menor = c

print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:48:55) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

menor = a

if(menor < b):
	menor = a
if(menor > b):
	menor = b
if(menor < c):
	menor = a
if(menor > c):
	menor = c
	print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:49:10) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

menor = a

if(menor < b):
	menor = a
if(menor > b):
	menor = b
if(menor < c):
	menor = a
if(menor > c):
	menor = c
	print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 14:32:05) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c)
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 14:32:15) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c))
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 14:32:34) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c))
-- EXECUTION TIME:
0.176275
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 14:44:44) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

#print(min(a, b, c))
menor = a
if(a<b):
	menor = a
	if(a<c):
		menor = a
if(b<a): 
	menor = b
	if(b<c):
		menor = b
if(c<a):	
	menor = c
	if(c<b):
		menor = c
		
		print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 14:45:11) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

#print(min(a, b, c))
menor = a
if(a<b):
	menor = a
	if(a<c):
		menor = a
if(b<a): 
	menor = b
	if(b<c):
		menor = b
if(c<a):	
	menor = c
	if(c<b):
		menor = c
		
		print(menor)	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 14:49:06) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

#print(min(a, b, c))

print(a<b)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:11:50) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c))

menor = a
if (a < b) and (a < c):
	menor =a
else:
	if (b < a) and (b < c):
		menor = b
	else:
		if (c < a) and (c < b):
			menor = c

print(menor)			

-- OUTPUT:
35
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:11:55) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c))

menor = a
if (a < b) and (a < c):
	menor =a
else:
	if (b < a) and (b < c):
		menor = b
	else:
		if (c < a) and (c < b):
			menor = c

print(menor)			

-- OUTPUT:
35
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:12:08) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

print(min(a, b, c))

menor = a
if (a < b) and (a < c):
	menor =a
else:
	if (b < a) and (b < c):
		menor = b
	else:
		if (c < a) and (c < b):
			menor = c

print(menor)			

-- OUTPUT:
35
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:12:32) 
-- CODE:
#Leitura dos numeros inteiros
a = int(input("digite um numero inteiro a: "))
b = int(input("digite um numero inteiro b: "))
c = int(input("digite um numero inteiro c: "))

menor = a
if (a < b) and (a < c):
	menor =a
else:
	if (b < a) and (b < c):
		menor = b
	else:
		if (c < a) and (c < b):
			menor = c

print(menor)			

-- EXECUTION TIME:
0.143669
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
